--- a/article.html
+++ b/article.html
@@ -111,6 +111,20 @@
 
         <main class="content-area">
 
+            <section class="article-section">
+                <div class="article-year-title">2025년</div>
+                <div class="article-list">
+                    <a href="#" target="_blank" class="article-link">바셀린</a>
+                    <a href="#" target="_blank" class="article-link">모르는 사람</a>
+                    <a href="#" target="_blank" class="article-link">oz Han</a>
+                    <a href="#" target="_blank" class="article-link">카이사르</a>
+                    <a href="#" target="_blank" class="article-link">릴라</a>
+                    <a href="#" target="_blank" class="article-link">양정훈</a>
+                    <a href="#" target="_blank" class="article-link">Retions</a>
+                    <a href="#" target="_blank" class="article-link">TB</a>
+                    <a href="#" target="_blank" class="article-link">사이키라</a>
+                </div>
+            </section>
 
             <section class="article-section">
                 <div class="article-year-title">2024년</div>
