--- a/result_2024.html
+++ b/result_2024.html
@@ -8,35 +8,48 @@
     <link rel="stylesheet" href="style.css">
 
     <style>
-        /* 주의: 여기서 body {} 스타일을 지웠음! (이게 여백의 원인) */
-
-        /* 기존 .container와 이름이 겹쳐서 충돌나지 않게 이름 변경 */
         .legacy-result-container {
             display: flex;
             flex-direction: column;
             gap: 20px;
             margin-top: 20px;
-            /* 위쪽 간격 살짝 */
         }
 
         .section-header {
             font-size: 1.5rem;
-            /* 크기 단위 통일 */
             font-weight: bold;
             text-align: left;
             margin-bottom: 15px;
             margin-top: 30px;
             border-bottom: 2px solid #E8D9FF;
-            /* 디자인 통일감 주기 */
             padding-bottom: 10px;
             color: #333;
         }
 
+        /* ▼▼▼ [수정된 부분] ▼▼▼ */
         .video-grid {
             display: grid;
+            /* 기본(PC): 최소 200px 너비 유지하며 자동 채움 */
             grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
             gap: 15px;
         }
+
+        /* 📱 모바일 강제 설정 (HTML 내부 스타일이 우선순위가 높아서 여기에 추가해야 함) */
+        @media (max-width: 768px) {
+            .video-grid {
+                /* 너비 상관없이 무조건 2개씩 배치 */
+                grid-template-columns: repeat(2, 1fr) !important;
+                gap: 10px;
+            }
+
+            /* 모바일에서 제목 글자 크기 조금 줄임 (칸이 좁아지니까) */
+            .video-title {
+                font-size: 0.8rem;
+                padding: 8px;
+            }
+        }
+
+        /* ▲▲▲ [여기까지] ▲▲▲ */
 
         .video-card {
             background-color: #fff;
@@ -45,12 +58,10 @@
             transition: transform 0.2s;
             overflow: hidden;
             border: 1px solid #eee;
-            /* 테두리 추가 */
         }
 
         .video-card:hover {
             transform: scale(1.03);
-            /* 너무 확 커지지 않게 조정 */
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
         }
 
@@ -63,7 +74,6 @@
         .video-thumbnail {
             width: 100%;
             aspect-ratio: 16 / 9;
-            /* 비율 고정 */
             object-fit: cover;
             display: block;
         }
@@ -75,6 +85,8 @@
             padding: 12px;
             text-align: center;
             line-height: 1.4;
+            word-break: keep-all;
+            /* 단어 단위로 줄바꿈 */
         }
     </style>
 </head>
@@ -131,7 +143,6 @@
                 .then(res => res.text())
                 .then(rep => {
                     const data = JSON.parse(rep.substr(47).slice(0, -2));
-                    // ID를 변경했으므로 여기도 맞춰서 변경
                     const container = document.getElementById('legacy-result-container');
                     const headerRow = data.table.rows[0];
 
