--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         <main class="content-area">
 
             <div class="simple-intro">
-                <h2 class="intro-title">한 해의 소리MAD를 한 번에 돌아보자!</h2>
+                <div class="intro-group">
+                    <h3>한 해의 소리MAD를 한 번에 돌아보자!</h3>
+                </div>
 
                 <div class="intro-group">
                     <h3>・소리MAD 10선</h3>
