--- a/article.html
+++ b/article.html
@@ -114,7 +114,7 @@
             <section class="article-section">
                 <div class="article-year-title">2025년</div>
                 <div class="article-list">
-                    <a href="#" target="_blank" class="article-link">바셀린</a>
+                    <!-- <a href="#" target="_blank" class="article-link">바셀린</a>
                     <a href="#" target="_blank" class="article-link">모르는 사람</a>
                     <a href="#" target="_blank" class="article-link">oz Han</a>
                     <a href="#" target="_blank" class="article-link">카이사르</a>
@@ -122,7 +122,7 @@
                     <a href="#" target="_blank" class="article-link">양정훈</a>
                     <a href="#" target="_blank" class="article-link">Retions</a>
                     <a href="#" target="_blank" class="article-link">TB</a>
-                    <a href="#" target="_blank" class="article-link">사이키라</a>
+                    <a href="#" target="_blank" class="article-link">사이키라</a> -->
                 </div>
             </section>
 
