타이틀수정

--- a/article.html
+++ b/article.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>소리MAD 10선 - 기사 읽기</title>
+    <title>소리MAD 대상</title>
     <link rel="stylesheet" href="style.css">
 
     <style>
