--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li><a href="result_2025.html">소리MAD 10선</a></li>
                     <li><a href="awards_2025.html">소리MAD 어워즈</a></li>
                     <li><a href="vote.html">투표하기</a></li>
-                    <li><a href="article.html">10선 기사 읽기</a></li>
+                    <li><a href="article.html">10선 기사</a></li>
                 </ul>
             </nav>
         </header>
