--- a/vote.html
+++ b/vote.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>소리MAD 대상 - 투표하기</title>
+    <title>소리MAD 대상</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -23,7 +23,7 @@
 
                     <li><a href="vote.html" class="active">투표하기</a></li>
 
-                    <li><a href="article.html">10선 기사 읽기</a></li>
+                    <li><a href="article.html">10선 기사</a></li>
                 </ul>
             </nav>
         </header>
