--- a/awards_2024.html
+++ b/awards_2024.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>소리MAD 어워즈 - 2024</title>
+    <title>소리MAD 대상</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -21,7 +21,7 @@
                     <li><a href="result_2025.html">소리MAD 10선</a></li>
                     <li><a href="awards_2025.html" class="active">소리MAD 어워즈</a></li>
                     <li><a href="vote.html">투표하기</a></li>
-                    <li><a href="article.html">10선 기사 읽기</a></li>
+                    <li><a href="article.html">10선 기사</a></li>
                 </ul>
             </nav>
         </header>
