--- a/result_2024.html
+++ b/result_2024.html
@@ -88,7 +88,9 @@
     <div class="container">
         <header>
             <h1 class="main-title">
-                <a href="index.html">소리MAD 대상</a>
+                <a href="index.html">
+                    <img src="title.png" alt="소리MAD 대상" class="logo-img">
+                </a>
             </h1>
 
             <nav class="gnb">
