--- a/comment_2024.html
+++ b/comment_2024.html
@@ -134,7 +134,8 @@
             const sheetId = '1DZET9hl7eVakqGtGuztbGfE6cjWtO0r5Nm3QA_XFjEg';
             const sheetName = '2024';
             const baseUrl = `https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?`;
-            const query = encodeURIComponent(`Select B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V, W, X, Y, Z, AA, AB, AC, AD, AE, AF`);
+
+            const query = encodeURIComponent(`Select B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V, W, X, Y, Z, AA, AB, AC, AD, AE, AF, AG`);
             const url = `${baseUrl}&sheet=${sheetName}&tq=${query}`;
 
             fetch(url)
@@ -148,8 +149,9 @@
                     data.table.rows.forEach((row, index) => {
                         if (index === 0) return;
 
-                        const bValue = row.c[0]?.v;
-                        for (let i = 1; i < row.c.length; i += 3) {
+                        const bValue = row.c[0]?.v; 
+
+                        for (let i = 2; i < row.c.length; i += 3) {
                             const videoId = row.c[i]?.v;
                             const videoTitle = row.c[i + 1]?.v;
                             const videoComment = row.c[i + 2]?.v;
@@ -217,7 +219,7 @@
                         comments.forEach(({ bValue, comment }) => {
                             const row = document.createElement('tr');
                             const cell1 = document.createElement('td');
-                            cell1.textContent = bValue || '-'; 
+                            cell1.textContent = bValue || '-';
                             const cell2 = document.createElement('td');
                             cell2.textContent = comment || '';
                             row.appendChild(cell1);
