--- a/everyone_2024.html
+++ b/everyone_2024.html
@@ -218,7 +218,7 @@
                             if (channelLink) {
                                 const btn = document.createElement('a');
                                 btn.href = channelLink;
-                                btn.textContent = '채널 방문 ▶';
+                                btn.textContent = '채널 ▶';
                                 btn.className = 'channel-visit-btn';
                                 btn.target = '_blank';
 
