--- a/result_2025.html
+++ b/result_2025.html
@@ -8,6 +8,81 @@
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="apple-touch-icon" href="favicon.png">
     <link rel="stylesheet" href="style.css">
+
+    <style>
+        .legacy-result-container {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .section-header {
+            font-size: 1.5rem;
+            font-weight: bold;
+            text-align: left;
+            margin-bottom: 15px;
+            margin-top: 30px;
+            border-bottom: 2px solid #E8D9FF;
+            padding-bottom: 10px;
+            color: #333;
+        }
+
+        .video-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+            gap: 15px;
+        }
+
+        @media (max-width: 768px) {
+            .video-grid {
+                grid-template-columns: repeat(2, 1fr) !important;
+                gap: 10px;
+            }
+
+            .video-title {
+                font-size: 0.8rem;
+                padding: 8px;
+            }
+        }
+
+        .video-card {
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            transition: transform 0.2s;
+            overflow: hidden;
+            border: 1px solid #eee;
+        }
+
+        .video-card:hover {
+            transform: scale(1.03);
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+        }
+
+        .video-card a {
+            text-decoration: none;
+            color: inherit;
+            display: block;
+        }
+
+        .video-thumbnail {
+            width: 100%;
+            aspect-ratio: 16 / 9;
+            object-fit: cover;
+            display: block;
+        }
+
+        .video-title {
+            font-size: 0.95rem;
+            font-weight: bold;
+            color: #333;
+            padding: 12px;
+            text-align: center;
+            line-height: 1.4;
+            word-break: keep-all;
+        }
+    </style>
 </head>
 
 <body>
@@ -42,13 +117,83 @@
 
             <div class="year-selector">
                 <a href="result_2025.html" class="year-btn year-active">2025</a>
-                <a href="result_2024.html" class="year-btn">2024</a>      
+                <a href="result_2024.html" class="year-btn">2024</a>
             </div>
 
-            <p>집계 중</p>
+            <div id="legacy-code-area">
+                <div id="legacy-result-container" class="legacy-result-container"></div>
+            </div>
+
         </main>
     </div>
 
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            // ★ [주의] 2025년 데이터가 있는 시트 ID로 꼭 확인/수정 필요! (지금은 2024랑 같다고 가정)
+            const sheetId = '1GE8EFnKGdQ6v8ISJRu4b6a17wE8Hu3rrzTCDKbdSBQE';
+            const sheetName = '2025'; // ★ 여기를 2025로 변경함
+            const baseUrl = `https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?`;
+            const query = encodeURIComponent('Select *');
+            const url = `${baseUrl}&sheet=${sheetName}&tq=${query}`;
+
+            fetch(url)
+                .then(res => res.text())
+                .then(rep => {
+                    const data = JSON.parse(rep.substr(47).slice(0, -2));
+                    const container = document.getElementById('legacy-result-container');
+
+                    // 데이터가 없거나 로딩 실패 시 대비
+                    if (!data.table || !data.table.rows || data.table.rows.length === 0) {
+                        container.innerHTML = '<p style="text-align:center; padding:50px;">데이터를 불러오는 중이거나 아직 결과가 입력되지 않았습니다.</p>';
+                        return;
+                    }
+
+                    const headerRow = data.table.rows[0];
+
+                    headerRow.c.forEach((header, colIndex) => {
+                        const 표수 = header?.v;
+                        if (!표수) return;
+
+                        const sectionHeader = document.createElement('div');
+                        sectionHeader.className = 'section-header';
+                        sectionHeader.textContent = 표수;
+                        container.appendChild(sectionHeader);
+
+                        const videoGrid = document.createElement('div');
+                        videoGrid.className = 'video-grid';
+
+                        for (let rowIndex = 1; rowIndex < data.table.rows.length; rowIndex += 2) {
+                            const videoId = data.table.rows[rowIndex]?.c[colIndex]?.v;
+                            const videoTitle = data.table.rows[rowIndex + 1]?.c[colIndex]?.v;
+                            if (videoId && videoTitle) {
+                                const card = createVideoCard(videoId, videoTitle);
+                                videoGrid.appendChild(card);
+                            }
+                        }
+
+                        container.appendChild(videoGrid);
+                    });
+                });
+
+            function createVideoCard(videoId, videoTitle) {
+                const card = document.createElement('div');
+                card.className = 'video-card';
+                const link = document.createElement('a');
+                link.href = `https://youtu.be/${videoId}`;
+                link.target = '_blank';
+                const thumbnail = document.createElement('img');
+                thumbnail.src = `https://img.youtube.com/vi/${videoId}/mqdefault.jpg`;
+                thumbnail.className = 'video-thumbnail';
+                const title = document.createElement('div');
+                title.className = 'video-title';
+                title.textContent = videoTitle;
+                link.appendChild(thumbnail);
+                link.appendChild(title);
+                card.appendChild(link);
+                return card;
+            }
+        });
+    </script>
 </body>
 
 </html>
