--- a/awards_2025.html
+++ b/awards_2025.html
@@ -21,9 +21,20 @@
             line-height: 1.4;
         }
 
+        /* 우승작 텍스트 스타일 (조금 더 강조) */
+        .top-card h3 {
+            margin-top: 15px;
+            margin-bottom: 5px;
+            font-size: 1.1rem;
+            color: #6200ea;
+            /* 보라색 강조 */
+        }
+
         .top-card p {
-            color: #999;
-            font-style: italic;
+            color: #333;
+            font-weight: bold;
+            word-break: break-word;
+            /* 긴 유행어 줄바꿈 */
         }
     </style>
 </head>
@@ -58,31 +69,36 @@
             <section class="awards-top-section">
                 <div class="top-card">
                     <div class="img-wrapper">
-                        <img src="https://placehold.co/600x338/E8D9FF/6200ea?text=?" alt="집계 중">
+                        <img src="images_2025/음악2.jpg" alt="(무)책임집합체">
                     </div>
                     <h3>🎵 올해의 음악</h3>
-                    <p>집계 중...</p>
+                    <p>(무)책임집합체 (㋰責任集合体)</p>
                 </div>
+
                 <div class="top-card">
                     <div class="img-wrapper">
-                        <img src="https://placehold.co/600x338/E8D9FF/6200ea?text=?" alt="집계 중">
+                        <img src="images_2025/소재4.jpg" alt="트릭컬 리바이브">
                     </div>
                     <h3>📺 올해의 소재</h3>
-                    <p>집계 중...</p>
+                    <p>트릭컬 리바이브</p>
                 </div>
+
                 <div class="top-card">
                     <div class="img-wrapper">
-                        <img src="https://placehold.co/600x338/E8D9FF/6200ea?text=?" alt="집계 중">
+                        <img src="images_2025/기획1.jpg" alt="더욱더! 소리MAD 게시 이벤트 2025">
                     </div>
                     <h3>📅 올해의 기획</h3>
-                    <p>집계 중...</p>
+                    <p>더욱더! 소리MAD 게시 이벤트 2025</p>
                 </div>
+
                 <div class="top-card">
                     <div class="img-wrapper">
-                        <img src="https://placehold.co/600x338/E8D9FF/6200ea?text=?" alt="집계 중">
+                        <img src="images_2025/유행어3.jpg" alt="둘이서먹다하나죽어도...">
                     </div>
                     <h3>🗣️ 올해의 유행어</h3>
-                    <p>집계 중...</p>
+                    <p style="font-size: 0.9rem; line-height: 1.3;">
+                        둘이서먹다하나죽어도모르는맛인울퉁불퉁드르르드르르르르르드르르르르드르르르르르르르르르르드르르드르르르드르르르다다다다다다다다다다다다다울트라트레일러자막이오른다르르르르르르르르르르르르너를또어움직이고있어
+                    </p>
                 </div>
             </section>
 
