--- a/article.html
+++ b/article.html
@@ -100,8 +100,8 @@
                 <div class="article-year-title">2025년</div>
                 <div class="article-list">
                     <a href="https://hansol072.tistory.com/m/10" target="_blank" class="article-link">바셀린</a>
-                    <!-- <a href="#" target="_blank" class="article-link">모르는 사람</a>
-                    <a href="#" target="_blank" class="article-link">oz Han</a>
+                    <a href="https://moru-is-person.tistory.com/45" target="_blank" class="article-link">모르는 사람</a>
+                    <!-- <a href="#" target="_blank" class="article-link">oz Han</a>
                     <a href="#" target="_blank" class="article-link">카이사르</a>
                     <a href="#" target="_blank" class="article-link">릴라</a>
                     <a href="#" target="_blank" class="article-link">양정훈</a>
