--- a/article.html
+++ b/article.html
@@ -104,8 +104,8 @@
                     <a href="https://blog.naver.com/ozhan1121/224142981404" target="_blank" class="article-link">oz Han</a>
                     <a href="https://kyser.tistory.com/23" target="_blank" class="article-link">카이사르</a>
                     <a href="https://qyurila.github.io/blog/posts/otomad-top10-2025/" target="_blank" class="article-link">릴라</a>
-                    <!-- <a href="#" target="_blank" class="article-link">양정훈</a>
-                    <a href="#" target="_blank" class="article-link">Retions</a>
+                    <a href="https://yang-otomad.tistory.com/16" target="_blank" class="article-link">양정훈</a>
+                    <!-- <a href="#" target="_blank" class="article-link">Retions</a>
                     <a href="#" target="_blank" class="article-link">TB</a>
                     <a href="#" target="_blank" class="article-link">사이키라</a> -->
                 </div>
