--- a/article.html
+++ b/article.html
@@ -107,7 +107,7 @@
                     <a href="https://yang-otomad.tistory.com/16" target="_blank" class="article-link">양정훈</a>
                     <a href="https://blog.naver.com/alcmfnrl/224145724172" target="_blank" class="article-link">Retions</a>
                     <a href="https://isaac2020.tistory.com/3" target="_blank" class="article-link">TB</a>
-                    <!-- <a href="#" target="_blank" class="article-link">사이키라</a> -->
+                    <a href="https://saikira.tistory.com/24" target="_blank" class="article-link">사이키라</a>
                 </div>
             </section>
 
